# Alkellmist

./: NOTE.typ  alkellmist.cabal  flake.nix  justfile
src/: Setup.hs  main.hs
src/Chemical/: Atom.hs  Bond.hs  Chemical.hs
src/Parser/: Cli.hs  Selfies.hs
test/: Test.hs
